change author name

--- a/index.html
+++ b/index.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html lang="vi">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tư tưởng Hồ Chí Minh về Chủ nghĩa Xã hội | Chương 3</title>
-    <meta name="description" content="Bài thuyết trình về Tư tưởng Hồ Chí Minh về Chủ nghĩa Xã hội - Chương 3 Giáo trình Tư tưởng Hồ Chí Minh dành cho sinh viên đại học." />
-    <meta name="author" content="Nhóm thuyết trình" />
 
-    <meta property="og:title" content="Tư tưởng Hồ Chí Minh về Chủ nghĩa Xã hội" />
-    <meta property="og:description" content="Chương 3 - Giáo trình Tư tưởng Hồ Chí Minh" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Tư tưởng Hồ Chí Minh về Chủ nghĩa Xã hội | Chương 3</title>
+  <meta name="description"
+    content="Bài thuyết trình về Tư tưởng Hồ Chí Minh về Chủ nghĩa Xã hội - Chương 3 Giáo trình Tư tưởng Hồ Chí Minh dành cho sinh viên đại học." />
+  <meta name="author" content="Nhóm thuyết trình 3" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <meta property="og:title" content="Tư tưởng Hồ Chí Minh về Chủ nghĩa Xã hội" />
+  <meta property="og:description" content="Chương 3 - Giáo trình Tư tưởng Hồ Chí Minh" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
